--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@
 #spring.jpa.hibernate.ddl-auto=none
 
 server.port=9090
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/java_down
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/brainstationexmdb
 spring.datasource.username=root
 spring.datasource.password=
 
