--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.robi.dev</groupId>
-	<artifactId>nidussdapp</artifactId>
+	<artifactId>brainstationexaqm</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>NID ussd app</description>
+	<name>exam</name>
+	<description>Brain Station 23 Exam</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -64,6 +64,17 @@
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.1.3.Final</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
